@@ -560,3 +560,8 @@
 2012-08-21  Guilherme Silveira
 
 	* Fix password timeout with fixed point.
+
+2012-08-24  Cedric Bail
+
+	* Properly destroy color_class and text_class on an Edje_Object.
+
